--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,7 @@
+buildscript {
+    apply plugin: 'kotlin-android-extensions'
+}
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -8,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.yibber2"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -38,6 +42,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'de.hdodenhof:circleimageview:1.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
